--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "tsc",
 		"start": "node dist/index.js",
 		"start:dev": "set NODE_ENV=development && pnpm nodemon",
-		"start:prod": "node dist/index.js"
+		"start:prod": "node dist/index.js",
+		"start:db": "pnpm ts-node-dev --transpile-only ./src/db/initDB.ts"
 	},
 	"author": "",
 	"license": "ISC",
@@ -20,6 +21,7 @@
 		"mysql2": "^3.6.5"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.10.5",
 		"ts-node-dev": "^2.0.0",
